--- a/smart-app-banner.css
+++ b/smart-app-banner.css
@@ -25,7 +25,7 @@
 
 .smartbanner-container {
 	margin: 0 auto;
-	white-space: nowrap;
+	white-space: pre-wrap;
 }
 
 .smartbanner-close {
@@ -60,7 +60,7 @@
 .smartbanner-info {
 	display: inline-block;
 	vertical-align: middle;
-	width: 44%;
+	width: 40%;
 	font-size: 11px;
 	line-height: 1.2em;
 	font-weight: bold;
@@ -70,26 +70,26 @@
 	font-size:13px;
 	line-height: 18px;
 }
-
+.smartbanner-store{
+	text-overflow:ellipsis;
+	width: 100%;
+	overflow: hidden;
+	white-space: nowrap;
+}
 .smartbanner-button {
 	position: absolute;
-	right: 20px;
+	right: 5px;
 	top: 0;
 	bottom: 0;
 	margin: auto 0;
-	height: 24px;
 	font-size: 14px;
-	line-height: 24px;
+	line-height: 80px;
 	text-align: center;
-	font-weight: bold;
-	color: #6a6a6a;
-	text-transform: uppercase;
+	color: #006DFF;
 	text-decoration: none;
-	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
 }
 
 .smartbanner-button:active, .smartbanner-button:hover {
-	color: #aaa;
 }
 
 .smartbanner-button-text {
@@ -101,10 +101,9 @@
 
 /** iOS **/
 .smartbanner-ios {
-	background: #f4f4f4;
-	background: linear-gradient(to bottom, #f4f4f4, #cdcdcd);
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+	background: #F2F2F2;
 	line-height: 80px;
+	border-bottom: 1px solid #d7d7d7;
 }
 
 .smartbanner-ios .smartbanner-close {
@@ -140,17 +139,11 @@
 .smartbanner-ios .smartbanner-button {
 	padding: 0 10px;
 	min-width: 10%;
-	color: #6a6a6a;
-	background: #efefef;
-	background: linear-gradient(to bottom, #efefef, #dcdcdc);
-	border-radius: 3px;
-	box-shadow: inset 0 0 0 1px #bfbfbf, 0 1px 0 rgba(255, 255, 255, 0.6), 0 2px 0 rgba(255, 255, 255, 0.7) inset;
 }
 
 .smartbanner-ios .smartbanner-button:active,
 .smartbanner-ios .smartbanner-button:hover {
-	background: #dcdcdc;
-	background: linear-gradient(to bottom, #dcdcdc, #efefef);
+	text-decoration: underline;
 }
 
 .smartbanner-ios .smartbanner-button-text {
@@ -162,26 +155,23 @@
 
 /** Android **/
 .smartbanner-android {
-	background: #3d3d3d url(data:image/gif;base64,R0lGODlhCAAIAIABAFVVVf///yH5BAEHAAEALAAAAAAIAAgAAAINRG4XudroGJBRsYcxKAA7);
-	box-shadow: inset 0 4px 0 #88B131;
-	line-height: 82px;
+	background: #F2F2F2;
+	line-height: 80px;
+	border-bottom: 1px solid #d7d7d7;
 }
 
 .smartbanner-android .smartbanner-close {
 	border: 0;
-	width: 17px;
-	height: 17px;
-	line-height: 17px;
-	margin-right: 7px;
-	color: #b1b1b3;
-	background: #1c1e21;
-	text-shadow: 0 1px 1px #000;
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.8) inset, 0 1px 1px rgba(255, 255, 255, 0.3);
+	width: 18px;
+	height: 18px;
+	line-height: 18px;
+	color: #888;
+	text-shadow: 0 1px 0 white;
 }
 
 .smartbanner-android .smartbanner-close:active,
 .smartbanner-android .smartbanner-close:hover {
-	color: #eee;
+	color: #aaaaaa;
 }
 
 .smartbanner-android .smartbanner-icon {
@@ -190,22 +180,20 @@
 }
 
 .smartbanner-android .smartbanner-info {
-	color:#ccc;
-	text-shadow:0 1px 2px #000;
+	color: #6a6a6a;
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
 }
 
 .smartbanner-android .smartbanner-title {
-	color:#fff;
+	color:#4d4d4d;
 	font-weight: bold;
 }
 
 .smartbanner-android .smartbanner-button {
 	min-width: 12%;
-	color: #d1d1d1;
 	padding: 0;
 	background: none;
 	border-radius: 0;
-	box-shadow: 0 0 0 1px #333, 0 0 0 2px #DDDCDC;
 }
 
 .smartbanner-android .smartbanner-button:active,
@@ -217,8 +205,6 @@
 	text-align: center;
 	display: block;
 	padding: 0 10px;
-	background: #42B6C9;
-	background: linear-gradient(to bottom, #42B6C9, #39A9BB);
 	text-transform: none;
 	text-shadow: none;
 	box-shadow: none;
@@ -226,15 +212,14 @@
 
 .smartbanner-android .smartbanner-button-text:active,
 .smartbanner-android .smartbanner-button-text:hover {
-	background: #2AC7E1;
+	text-decoration: underline;
 }
 
 /** Windows **/
 .smartbanner-windows {
-	background: #f4f4f4;
-	background: linear-gradient(to bottom, #f4f4f4, #cdcdcd);
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+	background: #F2F2F2;
 	line-height: 80px;
+	border-bottom: 1px solid #d7d7d7;
 }
 
 .smartbanner-windows .smartbanner-close {
@@ -270,17 +255,11 @@
 .smartbanner-windows .smartbanner-button {
 	padding: 0 10px;
 	min-width: 10%;
-	color: #6a6a6a;
-	background: #efefef;
-	background: linear-gradient(to bottom, #efefef, #dcdcdc);
-	border-radius: 3px;
-	box-shadow: inset 0 0 0 1px #bfbfbf, 0 1px 0 rgba(255, 255, 255, 0.6), 0 2px 0 rgba(255, 255, 255, 0.7) inset;
 }
 
 .smartbanner-windows .smartbanner-button:active,
 .smartbanner-windows .smartbanner-button:hover {
-	background: #dcdcdc;
-	background: linear-gradient(to bottom, #dcdcdc, #efefef);
+	text-decoration: underline;
 }
 
 .smartbanner-windows .smartbanner-button-text {
